add repository test